# Hermes

./: Dockerfile  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml  taskfile.yaml
docs/: architecture.md
hermes/: ai_wrapper.py  feed_processor.py  feed_reader.py  main.py  pdf_generator.py  slack_notifier.py
